# learning-dev-containers

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: lib.h
src/: lib.cpp  main.cpp
test/: test_lib.cpp
